# Android-VideoPlay-FFmpeg

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/play/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: IPlayer.cpp  IPlayer.h  IPlayerProxy.cpp  IPlayerProxy.h  XData.cpp  XData.h  XParameter.cpp  XParameter.h  Xlog.cpp  Xlog.h  native-lib.cpp
app/src/main/cpp/audio/: IAudioPlay.cpp  IAudioPlay.h  SLAudioPlay.cpp  SLAudioPlay.h
app/src/main/cpp/builder/: FFPlayerBuilder.cpp  FFPlayerBuilder.h  IPlayerBuilder.cpp  IPlayerBuilder.h
app/src/main/cpp/decode/: FFDecode.cpp  FFDecode.h  IDecode.cpp  IDecode.h
app/src/main/cpp/demux/: FFDemux.cpp  FFDemux.h  IDemux.cpp  IDemux.h
app/src/main/cpp/opengl/: XEGL.cpp  XEGL.h  XShader.cpp  XShader.h  XTexture.cpp  XTexture.h
app/src/main/cpp/resample/: FFResample.cpp  FFResample.h  IResample.cpp  IResample.h
app/src/main/cpp/thread/: IObserver.cpp  IObserver.h  XThread.cpp  XThread.h
app/src/main/cpp/video/: GLVIdeoView.cpp  GLVideoView.h  IVideoView.cpp  IVideoView.h
app/src/main/java/com/play/ffmpeg/: MainActivity.java  XPlayView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/play/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
